ht1: add manual video validation
