# hometask_01/src/models/APIErrorResult.ts
@@ -1,3 +1,5 @@
-type APIErrorResult = {
+import {FieldError} from "./FieldError";
+
+export type APIErrorResult = {
     errorsMessages: FieldError[] | null;
 };
