# hometask_01/src/models/FieldError.ts
@@ -1,4 +1,4 @@
-type FieldError = {
+export type FieldError = {
     message: string | null;
     field: string | null;
 };
